# ALCE

./: .gitignore  README.md  README_ALCE.md  eval.py  make_dpo_dataset.py  pyproject.toml  run.py
configs/new/: qampari_gpt5_shot2_ndoc5_gtr_default.yaml  qampari_gpt5_shot2_ndoc5_gtr_extraction.yaml  qampari_gpt5_shot2_ndoc5_gtr_summary.yaml  qampari_gpt5_shot2_ndoc5_oracle_default.yaml  qampari_turbo_shot2_ndoc5_gtr_extraction.yaml  qampari_turbo_shot2_ndoc5_gtr_summary.yaml  qampari_turbo_shot2_ndoc5_oracle_default.yaml
tools/: run_all_configs.sh
