[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alce"
version = "0.1.0"
description = "ALCE: Attribution and evaluation utilities"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "torch",
  "transformers",
  "nltk",
  "rouge-score",
  "tqdm",
  "PyYAML",
  "python-dotenv",
  "portkey-ai",
  "tiktoken",
  "scikit-learn>=1.3.2",
]

[project.optional-dependencies]
# Used only when running `eval.py --mauve` (imported as `mauve`)
mauve = ["mauve-text"]

# Used only for interactive search in `run.py` when `--retriever` is a GTR model
gtr = ["sentence-transformers"]

[tool.setuptools]
# This repo is script-first (flat layout) and contains many top-level data folders
# (`data/`, `configs/`, `assets/`, etc.). Explicitly list modules to avoid setuptools
# treating those folders as packages during editable installs.
py-modules = ["run", "eval", "utils", "retrieval", "searcher", "post_hoc_cite"]


